// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scrollPaddingInline renders 0 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-inline: 0;
  -moz-scroll-padding-inline: 0;
  -ms-scroll-padding-inline: 0;
  scroll-padding-inline: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline: 0;
  -moz-scroll-padding-inline: 0;
  -ms-scroll-padding-inline: 0;
  scroll-padding-inline: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline: 0;
  -moz-scroll-padding-inline: 0;
  -ms-scroll-padding-inline: 0;
  scroll-padding-inline: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline: 0;
  -moz-scroll-padding-inline: 0;
  -ms-scroll-padding-inline: 0;
  scroll-padding-inline: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingInline renders function 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-inline: hasnot;
  -moz-scroll-padding-inline: hasnot;
  -ms-scroll-padding-inline: hasnot;
  scroll-padding-inline: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline: has;
  -moz-scroll-padding-inline: has;
  -ms-scroll-padding-inline: has;
  scroll-padding-inline: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline: hasnot;
  -moz-scroll-padding-inline: hasnot;
  -ms-scroll-padding-inline: hasnot;
  scroll-padding-inline: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline: has;
  -moz-scroll-padding-inline: has;
  -ms-scroll-padding-inline: has;
  scroll-padding-inline: has;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingInline renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-inline: invalid.path.1;
  -moz-scroll-padding-inline: invalid.path.1;
  -ms-scroll-padding-inline: invalid.path.1;
  scroll-padding-inline: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline: invalid.path.1;
  -moz-scroll-padding-inline: invalid.path.1;
  -ms-scroll-padding-inline: invalid.path.1;
  scroll-padding-inline: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline: invalid.path.1;
  -moz-scroll-padding-inline: invalid.path.1;
  -ms-scroll-padding-inline: invalid.path.1;
  scroll-padding-inline: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline: invalid.path.1;
  -moz-scroll-padding-inline: invalid.path.1;
  -ms-scroll-padding-inline: invalid.path.1;
  scroll-padding-inline: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingInline renders negative number 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-inline: -54881px;
  -moz-scroll-padding-inline: -54881px;
  -ms-scroll-padding-inline: -54881px;
  scroll-padding-inline: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline: -54881px;
  -moz-scroll-padding-inline: -54881px;
  -ms-scroll-padding-inline: -54881px;
  scroll-padding-inline: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline: -42365px;
  -moz-scroll-padding-inline: -42365px;
  -ms-scroll-padding-inline: -42365px;
  scroll-padding-inline: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline: -42365px;
  -moz-scroll-padding-inline: -42365px;
  -ms-scroll-padding-inline: -42365px;
  scroll-padding-inline: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingInline renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline: July;
    -moz-scroll-padding-inline: July;
    -ms-scroll-padding-inline: July;
    scroll-padding-inline: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline: August;
    -moz-scroll-padding-inline: August;
    -ms-scroll-padding-inline: August;
    scroll-padding-inline: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline: September;
    -moz-scroll-padding-inline: September;
    -ms-scroll-padding-inline: September;
    scroll-padding-inline: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-inline: November;
    -moz-scroll-padding-inline: November;
    -ms-scroll-padding-inline: November;
    scroll-padding-inline: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline: July;
    -moz-scroll-padding-inline: July;
    -ms-scroll-padding-inline: July;
    scroll-padding-inline: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline: August;
    -moz-scroll-padding-inline: August;
    -ms-scroll-padding-inline: August;
    scroll-padding-inline: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline: September;
    -moz-scroll-padding-inline: September;
    -ms-scroll-padding-inline: September;
    scroll-padding-inline: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-inline: November;
    -moz-scroll-padding-inline: November;
    -ms-scroll-padding-inline: November;
    scroll-padding-inline: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline: May;
    -moz-scroll-padding-inline: May;
    -ms-scroll-padding-inline: May;
    scroll-padding-inline: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline: June;
    -moz-scroll-padding-inline: June;
    -ms-scroll-padding-inline: June;
    scroll-padding-inline: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline: April;
    -moz-scroll-padding-inline: April;
    -ms-scroll-padding-inline: April;
    scroll-padding-inline: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-inline: November;
    -moz-scroll-padding-inline: November;
    -ms-scroll-padding-inline: November;
    scroll-padding-inline: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline: May;
    -moz-scroll-padding-inline: May;
    -ms-scroll-padding-inline: May;
    scroll-padding-inline: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline: June;
    -moz-scroll-padding-inline: June;
    -ms-scroll-padding-inline: June;
    scroll-padding-inline: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline: April;
    -moz-scroll-padding-inline: April;
    -ms-scroll-padding-inline: April;
    scroll-padding-inline: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-inline: November;
    -moz-scroll-padding-inline: November;
    -ms-scroll-padding-inline: November;
    scroll-padding-inline: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingInline renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-scroll-padding-inline: July;
    -moz-scroll-padding-inline: July;
    -ms-scroll-padding-inline: July;
    scroll-padding-inline: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline: August;
    -moz-scroll-padding-inline: August;
    -ms-scroll-padding-inline: August;
    scroll-padding-inline: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-inline: September;
    -moz-scroll-padding-inline: September;
    -ms-scroll-padding-inline: September;
    scroll-padding-inline: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline: November;
    -moz-scroll-padding-inline: November;
    -ms-scroll-padding-inline: November;
    scroll-padding-inline: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-inline: August;
    -moz-scroll-padding-inline: August;
    -ms-scroll-padding-inline: August;
    scroll-padding-inline: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-scroll-padding-inline: July;
    -moz-scroll-padding-inline: July;
    -ms-scroll-padding-inline: July;
    scroll-padding-inline: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline: August;
    -moz-scroll-padding-inline: August;
    -ms-scroll-padding-inline: August;
    scroll-padding-inline: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-inline: September;
    -moz-scroll-padding-inline: September;
    -ms-scroll-padding-inline: September;
    scroll-padding-inline: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline: November;
    -moz-scroll-padding-inline: November;
    -ms-scroll-padding-inline: November;
    scroll-padding-inline: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-inline: August;
    -moz-scroll-padding-inline: August;
    -ms-scroll-padding-inline: August;
    scroll-padding-inline: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-padding-inline: January;
    -moz-scroll-padding-inline: January;
    -ms-scroll-padding-inline: January;
    scroll-padding-inline: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline: December;
    -moz-scroll-padding-inline: December;
    -ms-scroll-padding-inline: December;
    scroll-padding-inline: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-inline: April;
    -moz-scroll-padding-inline: April;
    -ms-scroll-padding-inline: April;
    scroll-padding-inline: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline: May;
    -moz-scroll-padding-inline: May;
    -ms-scroll-padding-inline: May;
    scroll-padding-inline: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-inline: June;
    -moz-scroll-padding-inline: June;
    -ms-scroll-padding-inline: June;
    scroll-padding-inline: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-padding-inline: January;
    -moz-scroll-padding-inline: January;
    -ms-scroll-padding-inline: January;
    scroll-padding-inline: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline: December;
    -moz-scroll-padding-inline: December;
    -ms-scroll-padding-inline: December;
    scroll-padding-inline: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-inline: April;
    -moz-scroll-padding-inline: April;
    -ms-scroll-padding-inline: April;
    scroll-padding-inline: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline: May;
    -moz-scroll-padding-inline: May;
    -ms-scroll-padding-inline: May;
    scroll-padding-inline: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-inline: June;
    -moz-scroll-padding-inline: June;
    -ms-scroll-padding-inline: June;
    scroll-padding-inline: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingInline renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-inline: 54881px;
  -moz-scroll-padding-inline: 54881px;
  -ms-scroll-padding-inline: 54881px;
  scroll-padding-inline: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline: 54881px;
  -moz-scroll-padding-inline: 54881px;
  -ms-scroll-padding-inline: 54881px;
  scroll-padding-inline: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline: 42365px;
  -moz-scroll-padding-inline: 42365px;
  -ms-scroll-padding-inline: 42365px;
  scroll-padding-inline: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline: 42365px;
  -moz-scroll-padding-inline: 42365px;
  -ms-scroll-padding-inline: 42365px;
  scroll-padding-inline: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingInline renders string 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-inline: July;
  -moz-scroll-padding-inline: July;
  -ms-scroll-padding-inline: July;
  scroll-padding-inline: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline: July;
  -moz-scroll-padding-inline: July;
  -ms-scroll-padding-inline: July;
  scroll-padding-inline: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline: June;
  -moz-scroll-padding-inline: June;
  -ms-scroll-padding-inline: June;
  scroll-padding-inline: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline: June;
  -moz-scroll-padding-inline: June;
  -ms-scroll-padding-inline: June;
  scroll-padding-inline: June;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingInline renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-inline: DarkSlateBlue;
  -moz-scroll-padding-inline: DarkSlateBlue;
  -ms-scroll-padding-inline: DarkSlateBlue;
  scroll-padding-inline: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline: DarkSlateBlue;
  -moz-scroll-padding-inline: DarkSlateBlue;
  -ms-scroll-padding-inline: DarkSlateBlue;
  scroll-padding-inline: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline: DarkSlateBlue;
  -moz-scroll-padding-inline: DarkSlateBlue;
  -ms-scroll-padding-inline: DarkSlateBlue;
  scroll-padding-inline: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline: DarkSlateBlue;
  -moz-scroll-padding-inline: DarkSlateBlue;
  -ms-scroll-padding-inline: DarkSlateBlue;
  scroll-padding-inline: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
